tests/negative/other/undefined_type.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that using an undefined type for a variable causes a compile error.

function main() {
    let x: UnknownType = 10; // Error: UnknownType is not defined
    
    print(x);
}
